@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@posteo.net>
-" Last Change: March 10, 2023
+" Last Change: May 7, 2023
 " Inspired By: Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -14,29 +14,29 @@ set cpo-=C
 
 " General commands
 syntax keyword vifmCommand contained
-		\ alink apropos bmark bmarks bmgo cds change chmod chown clone compare
-		\ cope[n] co[py] cq[uit] d[elete] delbmarks delm[arks] delsession di[splay]
-		\ dirs e[dit] el[se] empty en[dif] exi[t] file fin[d] fini[sh] go[to] gr[ep]
-		\ h[elp] hideui histnext his[tory] histprev keepsel jobs locate ls lstrash
-		\ marks media mes[sages] mkdir m[ove] noh[lsearch] on[ly] plugin plugins
-		\ popd pushd pu[t] pw[d] qa[ll] q[uit] redr[aw] rege[dit] reg[isters]
-		\ regular rename restart restore rlink screen sh[ell] siblnext siblprev
-		\ sor[t] sp[lit] st[op] s[ubstitute] tabc[lose] tabm[ove] tabname tabnew
-		\ tabn[ext] tabo[nly] tabp[revious] touch tr trashes tree session sync
-		\ undol[ist] ve[rsion] vie[w] vifm vs[plit] winc[md] w[rite] wq wqa[ll]
-		\ xa[ll] x[it] y[ank]
+		\ alink apropos bmark bmarks bmgo cds change chi[story] chmod chown clone
+		\ compare cope[n] co[py] cq[uit] d[elete] delbmarks delm[arks] delsession
+		\ di[splay] dirs e[dit] el[se] empty en[dif] exi[t] file fin[d] fini[sh]
+		\ go[to] gr[ep] h[elp] hideui histnext his[tory] histprev keepsel jobs
+		\ locate ls lstrash marks media mes[sages] mkdir m[ove] noh[lsearch]
+		\ on[ly] plugin plugins popd pushd pu[t] pw[d] qa[ll] q[uit] redr[aw]
+		\ rege[dit] reg[isters] regular rename restart restore rlink screen sh[ell]
+		\ siblnext siblprev sor[t] sp[lit] st[op] s[ubstitute] tabc[lose] tabm[ove]
+		\ tabname tabnew tabn[ext] tabo[nly] tabp[revious] touch tr trashes tree
+		\ session sync undol[ist] ve[rsion] vie[w] vifm vs[plit] winc[md] w[rite]
+		\ wq wqa[ll] xa[ll] x[it] y[ank]
 		\ nextgroup=vifmArgs
 syntax keyword vifmCommandCN contained
-		\ alink apropos bmark bmarks bmgo cds change chmod chown clone compare
-		\ cope[n] co[py] cq[uit] d[elete] delbmarks delm[arks] delsession di[splay]
-		\ dirs e[dit] el[se] empty en[dif] exi[t] file fin[d] fini[sh] go[to] gr[ep]
-		\ h[elp] hideui histnext his[tory] histprev jobs locate ls lstrash marks
-		\ media mes[sages] mkdir m[ove] noh[lsearch] on[ly] popd pushd pu[t] pw[d]
-		\ qa[ll] q[uit] redr[aw] rege[dit] reg[isters] regular rename restart restore
-		\ rlink screen sh[ell] siblnext siblprev sor[t] sp[lit] s[ubstitute]
-		\ tabc[lose] tabm[ove] tabname tabnew tabn[ext] tabo[nly] tabp[revious]
-		\ touch tr trashes tree session sync undol[ist] ve[rsion] vie[w] vifm
-		\ vs[plit] winc[md] w[rite] wq wqa[ll] xa[ll] x[it] y[ank]
+		\ alink apropos bmark bmarks bmgo cds change chi[story] chmod chown clone
+		\ compare cope[n] co[py] cq[uit] d[elete] delbmarks delm[arks] delsession
+		\ di[splay] dirs e[dit] el[se] empty en[dif] exi[t] file fin[d] fini[sh]
+		\ go[to] gr[ep] h[elp] hideui histnext his[tory] histprev jobs locate ls
+		\ lstrash marks media mes[sages] mkdir m[ove] noh[lsearch] on[ly] popd pushd
+		\ pu[t] pw[d] qa[ll] q[uit] redr[aw] rege[dit] reg[isters] regular rename
+		\ restart restore rlink screen sh[ell] siblnext siblprev sor[t] sp[lit]
+		\ s[ubstitute] tabc[lose] tabm[ove] tabname tabnew tabn[ext] tabo[nly]
+		\ tabp[revious] touch tr trashes tree session sync undol[ist] ve[rsion]
+		\ vie[w] vifm vs[plit] winc[md] w[rite] wq wqa[ll] xa[ll] x[it] y[ank]
 		\ nextgroup=vifmArgsCN
 
 " commands that might be prepended to a command without changing everything else
