@@ -133,6 +133,7 @@ static int bmarks_do(const cmd_info_t *cmd_info, int go);
 static char * make_tags_list(const cmd_info_t *cmd_info);
 static char * args_to_csl(const cmd_info_t *cmd_info);
 static int cabbrev_cmd(const cmd_info_t *cmd_info);
+static int chistory_cmd(const cmd_info_t *cmd_info);
 static int cnoreabbrev_cmd(const cmd_info_t *cmd_info);
 static int handle_cabbrevs(const cmd_info_t *cmd_info, int no_remap);
 static int list_abbrevs(const char prefix[]);
@@ -395,6 +396,10 @@ const cmd_add_t cmds_list[] = {
 	  .descr = "display/create cmdline abbrevs",
 	  .flags = 0,
 	  .handler = &cabbrev_cmd,     .min_args = 0,   .max_args = NOT_DEF, },
+	{ .name = "chistory",          .abbr = "chi",   .id = -1,
+	  .descr = "display history of menus",
+	  .flags = 0,
+	  .handler = &chistory_cmd,    .min_args = 0,   .max_args = 0, },
 	{ .name = "cnoreabbrev",       .abbr = "cnorea", .id = COM_CABBR,
 	  .descr = "display/create noremap cmdline abbrevs",
 	  .flags = 0,
@@ -1356,6 +1361,13 @@ static int
 cabbrev_cmd(const cmd_info_t *cmd_info)
 {
 	return handle_cabbrevs(cmd_info, 0);
+}
+
+/* Displays list of remembered menus. */
+static int
+chistory_cmd(const cmd_info_t *cmd_info)
+{
+	return show_chistory_menu(curr_view) != 0;
 }
 
 /* Registers command-line mode abbreviation of noremap kind. */
