@@ -1,6 +1,5 @@
 /* vifm
- * Copyright (C) 2001 Ken Steen.
- * Copyright (C) 2011 xaizek.
+ * Copyright (C) 2023 xaizek.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,36 +16,16 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
  */
 
-#ifndef VIFM__MENUS__ALL_H__
-#define VIFM__MENUS__ALL_H__
+#ifndef VIFM__MENUS__CHISTORY_MENU_H__
+#define VIFM__MENUS__CHISTORY_MENU_H__
 
-#include "apropos_menu.h"
-#include "bmarks_menu.h"
-#include "cabbrevs_menu.h"
-#include "chistory_menu.h"
-#include "colorscheme_menu.h"
-#include "commands_menu.h"
-#include "dirhistory_menu.h"
-#include "dirstack_menu.h"
-#include "filetypes_menu.h"
-#include "find_menu.h"
-#include "grep_menu.h"
-#include "history_menu.h"
-#include "jobs_menu.h"
-#include "locate_menu.h"
-#include "map_menu.h"
-#include "marks_menu.h"
-#include "media_menu.h"
-#include "plugins_menu.h"
-#include "registers_menu.h"
-#include "trash_menu.h"
-#include "trashes_menu.h"
-#include "undolist_menu.h"
-#include "users_menu.h"
-#include "vifm_menu.h"
-#include "volumes_menu.h"
+struct view_t;
 
-#endif /* VIFM__MENUS__ALL_H__ */
+/* Displays list of stashed menus.  Returns non-zero if status bar message
+ * should be saved. */
+int show_chistory_menu(struct view_t *view);
+
+#endif /* VIFM__MENUS__CHISTORY_MENU_H__ */
 
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 filetype=c : */
